# qbit

./: .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci_check.yml  release.yml  test.yml
src/: builder.rs  client.rs  ext.rs  lib.rs  test.rs
src/endpoint/: app.rs  auth.rs  log.rs  mod.rs  rss.rs  search.rs  sync.rs  torrent.rs  transfer.rs
src/model/: app.rs  cookie.rs  log.rs  mod.rs  rss.rs  search.rs  sync.rs  torrent.rs  transfer.rs
tests/fixtures/: qbit_rs_test.py  test-feed.xml
