[package]
name          = "qbit-rs"
version       = "0.4.8"
edition       = "2021"
license       = "MIT"
description   = "A Rust library for interacting with qBittorrent's Web API"
readme        = "README.md"
documentation = "https://docs.rs/qbit-rs"
repository    = "https://github.com/George-Miao/qbit"
homepage      = "https://github.com/George-Miao/qbit"
authors       = ["George Miao <gm@miao.dev>"]
keywords      = ["qbit", "qBittorrent", "web", "api", "torrent"]
categories    = ["network-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default    = ["builder", "native-tls", "reqwest"]
reqwest    = ["dep:reqwest"]
cyper      = ["dep:cyper"]
rustls-tls = ["reqwest?/rustls", "cyper?/rustls"]
native-tls = ["reqwest?/default-tls", "cyper?/native-tls"]

# enables typed-builder on args types
builder = ["dep:typed-builder"]

[dependencies]
typed-builder = { version = "0.18.2", optional = true }
serde         = { version = "1.0.202", features = ["derive"] }
url           = { version = "2.5.0", features = ["serde"] }

mod_use     = "0.2.1"
serde-value = "0.7.0"
serde_repr  = "0.1.19"
serde_with  = "2.3.3"
tap         = "1.0.1"
thiserror   = "1.0.61"
tracing     = "0.1.40"
serde_json  = "1.0.117"
bytes       = "1.6.0"
cfg-if      = "1.0.4"
http        = "1.1.0"
mime        = "0.3.17"

# HTTP Client
# compio / cyper
[dependencies.cyper]
version = "0.8"
optional = true
default-features = false
features = ["json", "multipart"]

# tokio / reqwest
[dependencies.reqwest]
version = "0.13"
optional = true
default-features = false
features = ["json", "form", "multipart", "query"]

[dev-dependencies]
tokio = { version = "1.27.0", features = ["full"] }
compio = { version = "0.18.0", features = ["all"] }

dotenv             = "0.15.0"
tracing-subscriber = "0.3.16"
